--- a/index.html
+++ b/index.html
@@ -81,10 +81,143 @@
                                    </div>
                                    <div class="slide">4</div>
                                    <div class="slide">5</div>
+                                   <ul class="pager flex align-center">
+                                        <li><a href=""></a></li>
+                                        <li><a href=""></a></li>
+                                        <li><a class="active" href=""></a></li>
+                                        <li><a href=""></a></li>
+                                        <li><a href=""></a></li>
+                                   </ul>
                               </div>
                          </div>
                     </div>
                </div>
+               <section class="todays">
+                    <div class="subheading">
+                         <p>Today's</p>
+                    </div>
+                    <div class="row align-center">
+                         <div class="col-3">
+                              <h2>Flash Sales</h2>
+                         </div>
+                         <div class="col-6">
+                              <div class="timer">Time left</div>
+                         </div>
+                         <div class="col-3">
+                              <ul class="controls flex justify-right">
+                                   <li><a href="">&larr;</a></li>
+                                   <li><a href="">&rarr;</a></li>
+                              </ul>
+                         </div>
+                    </div>
+                    <div class="row">
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                    </div>
+                    <a href="" class="view-all-products">View All Products</a>
+                    <div class="sep" role="separator"></div>
+               </section>
+               <section class="categories">
+                    <div class="subheading">
+                         <p>Categories</p>
+                    </div>
+                    <div class="row">
+                         <div class="col-6">
+                              <h2>Browse By Category</h2>
+                         </div>
+                         <div class="col-6">
+                               <ul class="controls flex justify-right">
+                                   <li><a href="">&larr;</a></li>
+                                   <li><a href="">&rarr;</a></li>
+                              </ul>
+                         </div>
+               </section>
           </div>
      </main>
 </body>
