--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                          <div class="flex justify-space-bet align-center">
                               <nav>
                                    <ul class="flex">
-                                        <li><a class="active" href="">Home</a></li>
-                                        <li><a href="">Contact</a></li>
-                                        <li><a href="">About</a></li>
-                                        <li><a href="">Sign up</a></li>
+                                        <li><a class="active" href="index.html">Home</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="signup.html">Sign up</a></li>
                                    </ul>
                               </nav>
                               <div class="flex align-center">
@@ -41,8 +41,8 @@
                                         <input type="search" name="query" placeholder="What you are looking for? " required>
                                         <button><span class="fa fa-magnifying-glass" aria-hidden="true"></span></button>
                                    </form>
-                                   <button class="wishlist"><span class="fa fa-heart" aria-hidden="true"></span></button>
-                                   <button class="cart"><span class="fa fa-shopping-cart" aria-hidden="true"></span></button>
+                                   <a href="wishlist" class="wishlist"><span class="fa fa-heart" aria-hidden="true"></span></a>
+                                   <a href="cart.html" class="cart"><span class="fa fa-shopping-cart" aria-hidden="true"></span></a>
                                    <button class="menu"><span class="fa fa-bars" aria-hidden="true"></span></button>
                               </div>
                          </div>
@@ -557,11 +557,114 @@
                     </div>
                     <a href="" class="view-all-products">View All Products</a>
                </section>
+               <section class="new-arrival">
+                    <div class="subheading">
+                         <p>New Arrival</p>
+                    </div>
+                    <div class="row align-center">
+                         <div class="col-12">
+                              <h2>New Arrivals</h2>
+                         </div>
+                    </div>
+                    <div class="row">
+                         <div class="col-6">
+                              <div class="new-products-lg">
+                                   <img src="img/ps5.webp" alt="" width="511" height="511" class="img-resp" loading="lazy">
+                                   <div class="product-desc-over">
+                                        <h3>Play Station 5</h3>
+                                        <p>Black and White version of the PS5 coming out on sale.</p>
+                                        <a href="">Shop Now</a>
+                                   </div>
+                              </div>
+                         </div>
+                         <div class="col-6">
+                              <div class="new-products-md">
+                                   Women's collection
+                              </div>
+                              <div class="row">
+                                   <div class="col-6">
+                                        <div class="new-products-sm">
+                                             Speaker
+                                        </div>
+                                   </div>
+                                   <div class="col-6">
+                                        <div class="new-products-sm">
+                                             Perfume
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
+               </section>
+               <div class="features">
+                    <div class="row">
+                         <div class="col-4">4</div>
+                         <div class="col-4">4</div>
+                         <div class="col-4">4</div>
+                    </div>
+               </div>
           </div>
      </main>
      <footer>
           <div class="container">
-               Footer
+               <div class="row">
+                    <div class="col-3">
+                         <h3>Exclusive</h3>
+                         <p><a href="">Subscribe</a></p>
+                         <p><a href="">Get 10% off on first order</a></p>
+                         <form>
+                              <input type="email" placeholder="Enter your email">
+                              <button><span class="fa fa-paper-plane"></span></button>
+                         </form>
+                    </div>
+                    <div class="col-3">
+                         <h3>Support</h3>
+                         <address>Lorem ipsum dolor sit amet.</address>
+                         <p><a href="">Email</a></p>
+                         <p><a href="">Phone</a></p>
+                    </div>  
+                     <div class="col-2">
+                         <h3>Account</h3>
+                         <p><a href="">My Account</a></p>
+                         <p><a href="">Login / Register</a></p>
+                         <p><a href="">Cart</a></p>
+                         <p><a href="">Wishlist</a></p>
+                         <p><a href="">Shop</a></p>
+                     </div> 
+                      <div class="col-2">
+                         <h3>Quick Links</h3>
+                         <p><a href="">Privacy</a></p>
+                         <p><a href="">Terms of use</a></p>
+                         <p><a href="">FAQ</a></p>
+                         <p><a href="">Contact</a></p>
+
+                     </div>   
+                      <div class="col-2">
+                         <h3>Download App</h3>
+                         <div class="downloads">
+                              <div class="flex">
+                                   <div><img src="img/Qrcode.svg" alt="qr code" width="80" height="80"></div>
+                                   <div>
+                                        <a href="" class="playstore">Play Store</a>
+                                        <a href="" class="appstore">App Store</a>
+                                   </div>
+                              </div>
+                              
+                             
+                         </div>
+                         <div class="social">
+                              <ul class="flex">
+                                   <li><a href=""><span class="fa-brands fa-facebook-f"></span></a></li>
+                                   <li><a href=""><span class="fa-brands fa-twitter"></span></a></li>
+                                   <li><a href=""><span class="fa-brands fa-instagram"></span></a></li>
+                                   <li><a href=""><span class="fa-brands fa-linkedin-in"></span></a></li>
+                              </ul>
+                         </div>
+                     </div>     
+               </div>
+               <div class="copy">
+                    <p class="text-center">Copyright Rimel 2022. All right reserved</p>
+               </div>
           </div>
      </footer>
 </body>
