--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <title>Shopping</title>
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.css">
 </head>
 <body>
      <div class="topnav">
@@ -101,23 +102,45 @@
                          </div>
                          <div class="col-9 col-m-12">
                               <div class="slider">
-                                   <div class="slide">1</div>
-                                   <div class="slide">2</div>
-                                   <div class="slide active">
+                                   <div class="slide">
                                         <figure>
                                              <img src="img/iphone-14.webp" alt="iphone 14" width="892" height="344" class="img-resp">
                                              <a class="shop" href="">Shop Now &rarr; </a>
                                         </figure>
                                    </div>
-                                   <div class="slide">4</div>
-                                   <div class="slide">5</div>
-                                   <ul class="pager flex align-center">
+                                    <div class="slide">
+                                        <figure>
+                                             <img src="img/iphone-14.webp" alt="iphone 14" width="892" height="344" class="img-resp">
+                                             <a class="shop" href="">Shop Now &rarr; </a>
+                                        </figure>
+                                   </div>
+                                    <div class="slide">
+                                        <figure>
+                                             <img src="img/iphone-14.webp" alt="iphone 14" width="892" height="344" class="img-resp">
+                                             <a class="shop" href="">Shop Now &rarr; </a>
+                                        </figure>
+                                   </div>
+                                    <div class="slide">
+                                        <figure>
+                                             <img src="img/iphone-14.webp" alt="iphone 14" width="892" height="344" class="img-resp">
+                                             <a class="shop" href="">Shop Now &rarr; </a>
+                                        </figure>
+                                   </div>
+                                    <div class="slide">
+                                        <figure>
+                                             <img src="img/iphone-14.webp" alt="iphone 14" width="892" height="344" class="img-resp">
+                                             <a class="shop" href="">Shop Now &rarr; </a>
+                                        </figure>
+                                   </div>
+
+                                  
+                                   <!-- <ul class="pager flex align-center">
                                         <li><a href=""></a></li>
                                         <li><a href=""></a></li>
                                         <li><a class="active" href=""></a></li>
                                         <li><a href=""></a></li>
                                         <li><a href=""></a></li>
-                                   </ul>
+                                   </ul> -->
                               </div>
                          </div>
                     </div>
@@ -140,8 +163,8 @@
                               </ul>
                          </div>
                     </div>
-                    <div class="row">
-                         <div class="col-3">
+                    <div class="ticker">
+                         <div class="ticker-item">
                               <section class="product-sm">
                                    <div class="product-img">
                                         <div class="discount">-40%</div>
@@ -151,7 +174,7 @@
                                         <a class="addtocart" href="">Add To Cart</a>
                                    </div>
                                    <div class="product-desc">
-                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <h3>HAVIT HV-G92 Gamepad 1</h3>
                                         <p class="price">$120 <del>$160</del></p>
                                         <p class="rating">
                                              <span class="star-full">&starf;</span>
@@ -163,7 +186,7 @@
                                    </div>
                               </section>
                          </div>
-                         <div class="col-3">
+                          <div class="ticker-item">
                               <section class="product-sm">
                                    <div class="product-img">
                                         <div class="discount">-40%</div>
@@ -173,7 +196,7 @@
                                         <a class="addtocart" href="">Add To Cart</a>
                                    </div>
                                    <div class="product-desc">
-                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <h3>HAVIT HV-G92 Gamepad 2</h3>
                                         <p class="price">$120 <del>$160</del></p>
                                         <p class="rating">
                                              <span class="star-full">&starf;</span>
@@ -185,7 +208,7 @@
                                    </div>
                               </section>
                          </div>
-                         <div class="col-3">
+                          <div class="ticker-item">
                               <section class="product-sm">
                                    <div class="product-img">
                                         <div class="discount">-40%</div>
@@ -195,7 +218,7 @@
                                         <a class="addtocart" href="">Add To Cart</a>
                                    </div>
                                    <div class="product-desc">
-                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <h3>HAVIT HV-G92 Gamepad 3</h3>
                                         <p class="price">$120 <del>$160</del></p>
                                         <p class="rating">
                                              <span class="star-full">&starf;</span>
@@ -207,7 +230,7 @@
                                    </div>
                               </section>
                          </div>
-                         <div class="col-3">
+                          <div class="ticker-item">
                               <section class="product-sm">
                                    <div class="product-img">
                                         <div class="discount">-40%</div>
@@ -217,7 +240,51 @@
                                         <a class="addtocart" href="">Add To Cart</a>
                                    </div>
                                    <div class="product-desc">
-                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <h3>HAVIT HV-G92 Gamepad 4</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                          <div class="ticker-item">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad 5</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                          <div class="ticker-item">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad 6</h3>
                                         <p class="price">$120 <del>$160</del></p>
                                         <p class="rating">
                                              <span class="star-full">&starf;</span>
@@ -230,6 +297,96 @@
                               </section>
                          </div>
                     </div>
+                    <!-- <div class="row">
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                         <div class="col-3">
+                              <section class="product-sm">
+                                   <div class="product-img">
+                                        <div class="discount">-40%</div>
+                                        <div class="wishlist"><a href="" class="fa-regular fa-heart"></a></div>
+                                        <div class="preview"><a href="" class="fa-regular fa-eye"></a></div>
+                                        <img src="img/havic-gamepad.webp" srcset="img/havic-gamepad-2x.webp 2x" alt="havic gamepad" width="172" height="152" loading="lazy" class="img-resp">
+                                        <a class="addtocart" href="">Add To Cart</a>
+                                   </div>
+                                   <div class="product-desc">
+                                        <h3>HAVIT HV-G92 Gamepad</h3>
+                                        <p class="price">$120 <del>$160</del></p>
+                                        <p class="rating">
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star-full">&starf;</span>
+                                             <span class="star">&starf;</span>
+                                        </p>
+                                   </div>
+                              </section>
+                         </div>
+                    </div> -->
                     <a href="" class="view-all-products">View All Products</a>
                     <div class="sep" role="separator"></div>
                </section>
@@ -697,14 +854,19 @@
                </div>
           </div>
      </footer>
-<script src="js/jquery.min.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+<script src="js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
  <script>
 $(function(){
      $(".account").click(function(){
           $(this).toggleClass("active");
           $(".account-dropdown").slideToggle();
      });
+     $(".account").blur(function(){
+           $(this).removeClass("active");
+          $(".account-dropdown").slideUp();
+     })
 
      $("aside a.drop").click(function(e){
           e.preventDefault();
@@ -717,6 +879,31 @@ $(function(){
                $(this).next().fadeIn()
           }
      });
+     $("aside a").blur(function(){
+           $(".cat-dropdown").fadeOut();
+     });
+
+
+     $(".slider").bxSlider({
+          auto:true,
+          controls:false
+     });
+
+  $('.todays .controls a').click(function(e){
+     e.preventDefault();
+     const w=$('.ticker').width()/4;
+
+
+
+     if($(this).text()=="←"){
+          $('.ticker').scrollLeft("-"+w);
+     }
+     else{
+          $('.ticker').scrollLeft(w);
+     }
+  })
+
+
 
 
 });
